--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Awesome Site Title
+title: Amber Lautigar Reichert
 email: your-email@domain.com
 description: >
   Awesome site description here
@@ -20,8 +20,8 @@ bio: >
   Mea suas vituperatoribus et, virtute corpora quaestio cum ut.
   Ne solet nostrum complectitur pri, vis ut inani populo.
 author_image: "/assets/images/author.jpg"
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: theAmbericanWay
+github_username:  amber-reichert
 
 # Google Analytics
 analytics_id: ""
@@ -36,7 +36,7 @@ gems:
   - jekyll-paginate
 
 prose:
-  siteurl: 'https://uvalib.github.io/Jekyll-AMP'
+  siteurl: 'https://amber-reichert.github.io/Jekyll-AMP/'
   #relativeLinks: 'http://thetaper.library.virginia.edu/links.jsonp'
   ignore:
     - .gitignore
